5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1646_651.log
== TEST (2019-04-15 15:34:44) 
-- CODE:
a=float(input("altura: "))
b=input("sexo: ")
h=(72,7 * a) - 58
m=(62,1 * a )- 44,7
if(a==h):
	print(h)
else(a==m):
print(m)
-- ERROR:
File "XXXX", line 7
    else(a==m):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:35:15) 
-- CODE:
a=float(input("altura: "))
b=input("sexo: ")
h=(72,7 * a) - 58
m=(62,1 * a )- 44,7
if(a==h):
	print(m)
else:
print(m)
-- ERROR:
File "XXXX", line 8
    print(m)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:35:28) 
-- CODE:
a=float(input("altura: "))
b=input("sexo: ")
h=(72,7 * a) - 58
m=(62,1 * a )- 44,7
if(a==h):
	print(m)
else:
   print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    h=(72,7 * a) - 58
TypeError: unsupported operand type(s) for -: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:36:10) 
-- CODE:
a=float(input("altura: "))
b=input("sexo: ")
h=(72,7 * a) - 58
m=(62,1 * a )- 44,7
if(a==h):
	print(m)
else:
   print(m)
-- EXECUTION TIME:
0.134433
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/651/main.py", line 3, in <module>
    h=(72,7 * a) - 58
TypeError: unsupported operand type(s) for -: 'tuple' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:24) 
-- CODE:
a=float(input("altura: "))
b=input("sexo: ")
h=(72,7 * a) - 58
m=(62,1 * a )- 44,7
if(a==h):
	print(m)
else:
   print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    h=(72,7 * a) - 58
TypeError: unsupported operand type(s) for -: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:37:11) 
-- CODE:
a=float(input("altura: "))
b=input("sexo: ")
h=(72,7 * a) - 58
m=(62,1 * a )- 44,7
if(h==m):
	print(a)
else:
   print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    h=(72,7 * a) - 58
TypeError: unsupported operand type(s) for -: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:14:59) 
-- CODE:
a=float(input("altura: "))
b=input("sexo: ")
h=(72,7 * a) - 58
m=(62,1 * a )- 44,7
if(b==h):
	print(a)
else(b==m):
   print(a)
-- ERROR:
File "XXXX", line 7
    else(b==m):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:15:37) 
-- CODE:
a=float(input("altura: "))
b=input("sexo: ")
h=(72,7 * a) - 58
m=(62,1 * a )- 44,7
if(a==h==m):
	print(a)
else:
   print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    h=(72,7 * a) - 58
TypeError: unsupported operand type(s) for -: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:16:20) 
-- CODE:
a=float(input("altura: "))
b=input("sexo: ")
m=(62,1 * a )- 44,7
if(a==m):
	print(a)
else:
   print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    m=(62,1 * a )- 44,7
TypeError: unsupported operand type(s) for -: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:54:46) 
-- CODE:
a=float(input("altura: "))
b=input("sexo: ")
M=(72,7 * a) - 58
F=(62,1 * a )- 44,7
if(a = "M"):
	print(round(M, 2))
else (a = "F"):
   print(round(F, 2))
-- ERROR:
File "XXXX", line 5
    if(a = "M"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:55:32) 
-- CODE:
a=float(input("altura: "))
b=input("sexo: ")
M=(72,7 * a) - 58
F=(62,1 * a )- 44,7
if(a = "M"/"F"):
	print(round(M, 2))
else :
   print(round(F, 2))
-- ERROR:
File "XXXX", line 5
    if(a = "M"/"F"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:55:54) 
-- CODE:
a=float(input("altura: "))
b=input("sexo: ")
M=(72,7 * a) - 58
F=(62,1 * a )- 44,7
if(a = "M"/"F"):
	print(round(a, 2))
else :
   print(round(a, 2))
-- ERROR:
File "XXXX", line 5
    if(a = "M"/"F"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:56:16) 
-- CODE:
a=float(input("altura: "))
b=input("sexo: ")
M=(72,7 * a) - 58
F=(62,1 * a )- 44,7
if(a = "M"):
	print(round(a, 2))
else :
   print(round(a, 2))
-- ERROR:
File "XXXX", line 5
    if(a = "M"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:32:15) 
-- CODE:
a=float(input("altura: "))
b=input("sexo: ")
F=(62,1 * a )- 44,7
if(a == "M"):
	M=(72,7 * a) - 58
	print(round(M, 2))
if(a == "F") :
	F=(62,1* a) - 44,7
   print(round(F, 2))
-- ERROR:
File "XXXX", line 9
    print(round(F, 2))
                     ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:32:45) 
-- CODE:
a=float(input("altura: "))
b=input("sexo: ")
F=(62,1 * a )- 44,7
if(a == "M"):
	b=(72,7 * a) - 58
	print(round(b, 2))
if(a == "F") :
	b=(62,1* a) - 44,7
   print(round(b, 2))
-- ERROR:
File "XXXX", line 9
    print(round(b, 2))
                     ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
